test/Fail/Unsolved-meta-in-module-telescope.agda
module Unsolved-meta-in-module-telescope (A : _) where
